fixes #30: truncate text in image select input

--- a/src/input.css
+++ b/src/input.css
@@ -6,4 +6,8 @@
   .word-break {
     word-break: break-word;
   }
+
+  .grid-cols-auto-2 {
+    grid-template-columns: auto auto;
+  }
 }
